[gd_scene load_steps=4 format=3 uid="uid://c5xbd3qrnk5vl"]

[ext_resource type="Script" path="res://Scripts/Data/HUD.gd" id="1_xrsjc"]

[sub_resource type="Gradient" id="Gradient_qvgvk"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0)
colors = PackedColorArray(0.219608, 0.219608, 0.219608, 1, 0.862745, 0.862745, 0.862745, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yx05l"]
gradient = SubResource("Gradient_qvgvk")
fill = 2
fill_from = Vector2(0.482759, 0.487069)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xrsjc")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 112.0
offset_top = 104.0
offset_right = 176.0
offset_bottom = 168.0
texture = SubResource("GradientTexture2D_yx05l")

[node name="Food" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 34.0
text = "Food :"

[node name="Wood" type="Label" parent="."]
offset_left = 8.0
offset_top = 40.0
offset_right = 62.0
offset_bottom = 66.0
text = "Wood :"

[node name="Stone" type="Label" parent="."]
offset_left = 8.0
offset_top = 72.0
offset_right = 61.0
offset_bottom = 98.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Stone :"

[node name="GameTimer" type="Label" parent="."]
offset_left = 8.0
offset_top = 232.0
offset_right = 68.0
offset_bottom = 258.0
text = "Time"

[node name="GameMode" type="Label" parent="."]
offset_left = 8.0
offset_top = 200.0
offset_right = 102.0
offset_bottom = 226.0
text = "GameMode:"

[node name="Selected" type="Label" parent="."]
offset_left = 8.0
offset_top = 168.0
offset_right = 82.0
offset_bottom = 194.0
text = "Selected :"

[node name="HUDMainSeparation" type="HBoxContainer" parent="."]
visible = false
offset_left = 100.0
offset_right = 266.0
offset_bottom = 145.0

[node name="PlayerMenu" type="VBoxContainer" parent="HUDMainSeparation"]
layout_mode = 2

[node name="GameInformation" type="HSplitContainer" parent="HUDMainSeparation/PlayerMenu"]
layout_mode = 2
split_offset = 200

[node name="Resources" type="HBoxContainer" parent="HUDMainSeparation/PlayerMenu"]
layout_mode = 2

[node name="MenuBuilding" type="VBoxContainer" parent="HUDMainSeparation"]
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
